localDevTest/k8s/simpleweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleweb
  template:
    metadata:
      labels:
        app: simpleweb
    spec:
      containers:
      - name: simpleweb
        image: simpleweb:0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
