localDevTest/k8s/simpleweb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simpleweb
  labels:
    name: simpleweb
spec:
  containers:
  - name: simpleweb
    image: simpleweb:0.1
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
