localDevTest/k8s/simpleweb-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  type: ClusterIP
  selector:
    app: simpleweb
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
